[package]
name = "ts3-query"
version = "0.2.2"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
keywords = ["ts3","query","teamspeak3","teamspeak"]
description = "Teamspeak3 Query Library"
repository = "https://github.com/0xpr03/ts3_query"
license = "MIT/Apache-2.0"
categories = ["api-bindings"]
readme = "README.md"

[features]
backtrace = ["snafu/backtraces"]
managed = []
debug_response = []

[dependencies]
snafu = { version = "0.6" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]